torrentio/ingressroute-torrentio.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: torrentio.${dns_domain}
  namespace: torrentio
spec:
  routes:
    # Matches are evaluated downwards - last match wins
    - match: Host(`torrentio.${dns_domain}`)
      kind: Rule
      services:
        - name: torrentio-addon
          kind: Service
          port: 7001
      middlewares:  
        - name: error-pages
          namespace: traefik
        - name: rate-limit-torrentio
    # static pages can be less rate-limited
    - match: Host(`torrentio.${dns_domain}`) && PathPrefix(`/configure`) || PathPrefix(`/realdebrid`) || PathPrefix(`/premiumize`) || PathPrefix(`/alldebrid`) || PathPrefix(`/debridlink`) PathPrefix(`/offcloud`) || PathPrefix(`/putio`)
      kind: Rule
      services:
        - name: torrentio-addon
          kind: Service
          port: 7001
      middlewares:  
        - name: error-pages
          namespace: traefik   
        - name: rate-limit-torrentio-static
